[package]
name = "raxa"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4.22"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
winit = { version = "0.30.6" }
