[package]
name = "raxa"
version = "0.1.0"
edition = "2024"

# Enable small amount of optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
bytemuck = "1.21.0"
color-eyre = "0.6.3"
log = "0.4.22"
naga = { version = "23.1.0", features = ["wgsl-in", "spv-out"] }
shaderc = "0.8"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.6"
glam = { version = "0.29.2", features = ["bytemuck"] }
gpu-descriptor = "0.3.1"
log = "0.4.22"
presser = "0.3.1"
raw-window-handle = "0.6.2"
winit = { version = "0.30.6" }
smallvec = "1.0"

[dependencies.gpu-allocator]
version = "0.27.0"
default-features = false
features = ["vulkan"]

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["jpeg", "png"]
